src/objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>AccountSite__c</fullName>
        <label>Account Site</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected account must be a Site</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sites</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InstallerNote__c</fullName>
        <label>Installer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ListReferenceTerritory__c</fullName>
        <description>Reference of the Account Terretory for the Room list view</description>
        <formula>TEXT(AccountSite__r.Territory__c)</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramType__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DY</fullName>
                </value>
                <value>
                    <fullName>PY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountSite__c</columns>
        <columns>ListReferenceTerritory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>